--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,43 +1,28 @@
 {
   "name": "T1D Benefits Navigator",
-  "short_name": "T1D Benefits",
-  "description": "Find Patient Assistance Programs for Type 1 Diabetes supplies",
+  "short_name": "T1D Navigator",
+  "description": "Find Patient Assistance Programs for Type 1 Diabetes supplies and medications",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f0f23",
-  "theme_color": "#4c7cf0",
-  "orientation": "portrait",
+  "background_color": "#111827",
+  "theme_color": "#3B82F6",
+  "orientation": "portrait-primary",
   "scope": "/",
-  "lang": "en-US",
-  "categories": ["health", "medical", "utilities"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icon-512.png", 
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshot1.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Find Patient Assistance Programs"
-    },
-    {
-      "src": "/screenshot2.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Mobile-friendly Interface"
-    }
-  ]
+  "categories": ["health", "medical", "utilities"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
